<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_amount">Bill Amount?</string>
    <string name="bill">Bill:</string>
    <string name="rate_your_service">Rate Your Service</string>
    <string name="percent">Percent:</string>
    <string name="calculate">Calculate</string>
    <string name="Check">How Many Checks?</string>
    <string name="percent_10">10%</string>
    <string name="percent_15">15%</string>
    <string name="percent_18">18%</string>
    <string name="percent_20">20%</string>
    <string name="custom">Custom</string>
    <string name="tip_amount">Tip Amount?</string>
    <string name="reset">Reset</string>
    <string name="tip">Tip:</string>
    <string name="total">Total per person:</string>
    <string name="bill_error">Your bill must be at least $1!</string>
    <string name="check_error">You must enter at least one check!</string>
    <string name="tip_error">Your tip must be at least 1%!</string>
</resources>
